# routes/auth.js
@@ -1,0 +1,29 @@
+const express = require('express');
+const passport = require('passport');
+const router = express.Router();
+
+// Login with Google
+router.get(
+  '/google',
+  passport.authenticate('google', { scope: ['profile', 'email'] })
+);
+
+// Callback
+router.get(
+  '/google/callback',
+  passport.authenticate('google', {
+    failureRedirect: '/'
+  }),
+  (req, res) => {
+    res.redirect('/api-docs');
+  }
+);
+
+// Logout
+router.get('/logout', (req, res) => {
+  req.logout(() => {
+    res.redirect('/');
+  });
+});
+
+module.exports = router;
