# routes/authors.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const authorsController = require('../controllers/authors');
+const isAuthenticated = require('../middleware/auth');
 
 // GET all
 router.get('/', authorsController.getAll);
@@ -9,12 +10,12 @@ router.get('/', authorsController.getAll);
 router.get('/:id', authorsController.getSingle);
 
 // POST
-router.post('/', authorsController.createAuthor);
+router.post('/', isAuthenticated, authorsController.createAuthor);
 
 // PUT
-router.put('/:id', authorsController.updateAuthor);
+router.put('/:id', isAuthenticated, authorsController.updateAuthor);
 
 // DELETE
-router.delete('/:id', authorsController.deleteAuthor);
+router.delete('/:id', isAuthenticated, authorsController.deleteAuthor);
 
 module.exports = router;
